@@ -1,6 +1,6 @@
 {% verbatim %}
   <script id="beer-factory__upgrades-modal-template" type="text/template">
-    <p>{{ #t }}"beerFactory.modal.upgrades.description", {"__FACTORY__": "{{ #t}}"beerFactory.factory.{{ factory }}"{{ /t }}"}{{ /t }}</p>
+    <p>{{ #t }}"beerFactory.modal.upgrades.description", {"__FACTORY__": "{{ #t}}"beerFactory.factory.{{ factoryKey }}"{{ /t }}"}{{ /t }}</p>
     <hr />
     <div class="d-flex flex-row w-100">
       {{ #upgradePaths }}
