@@ -1,0 +1,18 @@
+<div id="beer-factory__manager-management-modal" class="modal fade" role="dialog" tabindex="-1">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">{{ translator.translate('beerFactory.modal.manager.title') }}</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="{{ translator.translate('aria.close') }}">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
+      <div class="modal-body">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">{{ translator.translate('ok') }}</button>
+      </div>
+    </div>
+  </div>
+</div>
