@@ -92,6 +92,7 @@
     "available": "Available",
     "costs": "Costs",
     "minigame": "Minigame",
+    "manage": "Manage",
     "wiki": "How to play",
     "issues": "Report an issue",
     "options": "Options",
@@ -2939,6 +2940,8 @@
     "beerFactory.equipment.diastatic.effect": "Provides an auto-buyer for your __BUILDING_PLURAL__",
     "beerFactory.equipment.amylase": "Amylase",
     "beerFactory.equipment.amylase.effect": "Provides an automatic level-up for your __BUILDING_PLURAL__",
+    "beerFactory.factory.hiredManagers": "Hired managers",
+    "beerFactory.factory.managerLevel": "Level of all managers",
     "beerFactory.materialSection.base": "Base materials",
     "beerFactory.materialSection.produced": "Produced materials",
     "beerFactory.materialSection.food": "Food storage",
@@ -3088,7 +3091,7 @@
     "beerFactory.upgrade.storage.double.7.title": "Storage Planet",
     "beerFactory.upgrade.storage.double.7.description": "Who wants to live on the Mars anyway? Use the Mars as a storage planet",
     "beerFactory.upgrade.storage.double.8.title": "Pressure Compression",
-    "beerFactory.upgrade.storage.double.8.description": "Use a large canon and shoot your items through the Jupiter to compress them by the pressure",
+    "beerFactory.upgrade.storage.double.8.description": "Use a large cannon and shoot your items through the Jupiter to compress them by the pressure",
     "beerFactory.upgrade.storage.double.9.title": "TAR compression",
     "beerFactory.upgrade.storage.double.9.description": "One of the best compression algorithms to reduce storage usage",
     "beerFactory.upgrade.storage.double.10.title": "TAR GZ compression",
@@ -3342,6 +3345,12 @@
     "beerFactory.queueLabel.5": "Construct element of unique build __BUILD__",
     "beerFactory.modal.upgrades.title": "Reached upgrades",
     "beerFactory.modal.upgrades.description": "Reached upgrade paths for your __FACTORY__:",
+    "beerFactory.modal.manager.title": "Manage factory managers",
+    "beerFactory.modal.manager.description": "Add managers to your __FACTORY__ and the corresponding factory extensions. Educate them for a more effective management.",
+    "beerFactory.modal.manager.factory": "Managers of your factory \"__FACTORY__\"",
+    "beerFactory.modal.manager.extension": "Managers of your extension \"__EXTENSION__\"",
+    "beerFactory.modal.manager.noManager": "No manager hired yet. Hire managers to increase your production.",
+    "beerFactory.modal.manager.hire": "Hire new manager",
     "beerFactory.modal.dropQueue.title": "Drop job from queue",
     "beerFactory.modal.dropQueue.description": "Do you really want to drop the job from the build queue? The invested materials will be lost.",
     "beerFactory.modal.queueHistory.title": "Build Queue history",
@@ -3375,6 +3384,8 @@
     "beerFactory.modal.equip.emptyState": "No items available to equip",
     "beerFactory.popover.extension.proxy": "Proxy extension is currently mirroring the __PROXY__ extension.",
     "beerFactory.popover.extension.proxy.empty": "Click to select a proxy for this extension to start the production of this extension",
+    "beerFactory.popover.extension.queueSize": "Projects in queue",
+    "beerFactory.popover.extension.queue.empty": "Add jobs to the queue of the extension to start a project",
     "beerFactory.popover.extension.capacity": "Storage capacity",
     "beerFactory.popover.extension.storage": "Stored materials",
     "beerFactory.popover.extension.average": "Average production per second",
